# video-transcript

./: .gitignore  PLAN.md  README.md  TASKS.md  package.json  pnpm-lock.yaml
.github/skills/agent-memory/: SKILL.md
.github/skills/markdown-to-pdf/: SKILL.md
.github/skills/markdown-to-pdf/scripts/: md_to_pdf.py
.github/skills/reviewer-process/: GUIDELINES.md  SKILL.md
.github/skills/skeleton-generator/: SKILL.md
.github/skills/skeleton-generator/assets/: AGENTS-BACKEND.md  AGENTS-NEXT.md  AGENTS-REACT.md
.github/skills/skill-creator/: SKILL.md
.github/skills/skill-installer/: SKILL.md
.github/skills/skill-installer/scripts/: install-skill.js
memories/video-transcript/: phase-1-setup-2026-02-23.md  phase-2-ui-file-selection-2026-02-23.md  phase-3-video-analysis-2026-02-23.md  ui-buttons-status-wsl-2026-02-23.md
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  ffmpeg-x86_64-unknown-linux-gnu
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: language.rs  mod.rs  settings.rs  video.rs
src-tauri/src/models/: language.rs  mod.rs  settings.rs
src-tauri/src/utils/: ffmpeg.rs
src/components/: CostEstimate.tsx  FileSelector.tsx  LanguageSelector.tsx  OutputLocationPicker.tsx  SettingsModal.tsx
src/services/: tauri-commands.ts
src/types/: languages.ts  processing.ts  settings.ts  video.ts
